SERVER-43701 Fix race condition between endBackup and cleanShutdown